<resources>
    <string name="app_name" translatable="false">Retrofit Application</string>
    <string name="movie_recomendation_app" translatable="true">Movie Recomendation App</string>
    <string name="popular_movies">Popular Movies</string>
    <string name="top_rated_movies">Top Rated Movies</string>
    <string name="see_more">See more</string>
    <string name="enter_movie_to_search_from">Enter Movie To Search From</string>
    <string name="search">Search</string>
    <string name="change_language">Change Language</string>
    <string name="HomePage">Home Page</string>
    <string name="PopularMovies">Popular Movies</string>
    <string name="Topratedmovies">Top Rated Movies</string>
    <string name="SearchMovies">Search Movies</string>
    <string name="SettingsPage">Settings</string>
    <string name="hindi">hindi</string>
    <string name="Gujarti">Gujarati</string>
    <string name="English">English</string>
    <string name="theme">Theme</string>
    <string name="lighttheme">Light Theme</string>
    <string name="darktheme">Dark Theme</string>
    <string name="christmas">Christmas</string>
    <string name="drawer_open">drawer open</string>
    <string name="drawer_close">drawer close</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="COLOR_SELECTION_APP">Color Selection App</string>
    <string name="HOME_SCREEN">Home Screen</string>
    <string name="ARRAY_LIST_INDEX">Arraylist</string>
    <string name="COLOR_ARRAYLIST">ColorList</string>
    <string name="INDRODUCTION_MESSAGE_COLORAPP">Welcome To Page where the background color is the combination of your selected three colors......</string>
    <string name="welcome">Welcome To HomePage</string>
    <string name="Home_Screen">Home Screen</string>
    <string name="video_api_app">Video API App</string>
    <string name="VideoAPIFRagment">Video API Fragment</string>
    <string name="alarm_manager">Alarm Manager</string>
    <string name="default_time">00:00 AM/PM</string>
    <string name="choose_time">Choose Time</string>
    <string name="et_time_manager">Enter Text you want to display in notification</string>
    <string name="set_alarm">Set Alarm</string>


</resources>