<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">
<FrameLayout
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AlarmFragment">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/alarm_manager"
        android:textSize="42sp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:text="@string/default_time"
        android:id="@+id/tv_time_display"
        android:textSize="40sp"
        android:fontFamily="sans-serif-condensed"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/choose_time"
        android:layout_marginTop="40dp"
        android:layout_marginStart="20dp"
        android:id="@+id/btn_time_picker"/>
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/et_time_manager"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:id="@+id/et_notification_text"

        android:inputType="text" />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/set_alarm"
        android:layout_marginTop="40dp"
        android:layout_marginStart="20dp"
        android:id="@+id/btn_set_alarm"/>



</LinearLayout>
</FrameLayout>
</layout>