<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">
    <include
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        layout="@layout/custom_toolbar"/>

<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:ignore="UselessParent">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:layout_marginTop="40dp"
                android:layout_marginStart="80dp"
                android:textSize="20sp"
                android:text="@string/movie_recomendation_app">

            </TextView>
    <LinearLayout
        android:layout_marginTop="50dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:ignore="UselessParent">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

            <ImageView
                android:layout_marginStart="2dp"
                android:layout_marginTop="50dp"
                android:layout_width="380dp"
                android:layout_height="170dp"
                app:srcCompat="@drawable/aa"
                tools:ignore="ContentDescription" />
                <ImageView
                    android:layout_marginTop="50dp"
                    android:layout_marginStart="2dp"
                    android:layout_width="380dp"
                    android:layout_height="170dp"
                    app:srcCompat="@drawable/bb"
                    tools:ignore="ContentDescription" />
                <ImageView
                    android:layout_marginTop="50dp"
                    android:layout_marginStart="2dp"
                    android:layout_width="380dp"
                    android:layout_height="170dp"
                    app:srcCompat="@drawable/cc"
                    tools:ignore="ContentDescription" />
                <ImageView
                    android:layout_marginTop="50dp"
                    android:layout_marginStart="2dp"
                    android:layout_width="380dp"
                    android:layout_height="170dp"
                    app:srcCompat="@drawable/dd"
                    tools:ignore="ContentDescription" />
            </LinearLayout>


        </HorizontalScrollView>

    </LinearLayout>
<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/popular_movies"
    android:layout_marginStart="10dp"
    android:layout_marginTop="320dp"
    android:textSize="20sp"
    android:textStyle="bold"
    android:fontFamily="sans-serif"
    android:textColor="@color/purple_200"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_seemore"
        android:layout_marginTop="320dp"
        android:layout_marginStart="310dp"
        android:text="@string/see_more"
        android:textStyle="bold"/>


    <LinearLayout
        android:layout_marginTop="350dp"
        android:layout_width="match_parent"
        android:layout_height="220dp"
        android:orientation="vertical">

        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/rec_popularmovies">

        </androidx.recyclerview.widget.RecyclerView>


    </LinearLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/top_rated_movies"
            android:layout_marginStart="10dp"
            android:layout_marginTop="620dp"
            android:textSize="20sp"
            android:textStyle="bold"
            android:fontFamily="sans-serif"
            android:textColor="@color/purple_200"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_seemore2"
            android:layout_marginTop="620dp"
            android:layout_marginStart="310dp"
            android:text="@string/see_more"
            android:textStyle="bold"/>


<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="650dp"
    android:orientation="vertical">
    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/rec_toprated">

    </androidx.recyclerview.widget.RecyclerView>


</LinearLayout>

</RelativeLayout>

</ScrollView>
</LinearLayout>