<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeFragment">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_marginStart="10dp"
        android:layout_marginTop="30dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textColor="@color/colorPrimary"
        android:textStyle="bold"
        android:text="@string/movie_recomendation_app"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:layout_marginTop="10dp"
        android:lineSpacingExtra="1.5dp"
        android:paddingRight="4dp"
        android:paddingLeft="4dp"
        android:layout_marginStart="10dp"
        android:textAlignment="textStart"
        android:text="“Every time I go to a movie, it’s magic, no matter what the movie’s about.” –  Steven Spielberg

\n Everyone loves movies irrespective of age, gender, race, color, or geographical location. We all in a way are connected to each other via this amazing medium. Yet what most interesting is the fact that how unique our choices and combinations are in terms of movie preferences. Some people like genre-specific movies be it a thriller, romance, or sci-fi, while others focus on lead actors and directors. When we take all that into account, it’s astoundingly difficult to generalize a movie and say that everyone would like it. But with all that said, it is still seen that similar movies are liked by a specific part of the society."
/>
    <TextView
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textColor="@color/colorPrimary"
        android:textStyle="bold"
        android:text="@string/COLOR_SELECTION_APP"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:layout_marginTop="10dp"
        android:lineSpacingExtra="1.5dp"
        android:paddingRight="4dp"
        android:paddingLeft="4dp"
        android:layout_marginStart="10dp"
        android:textAlignment="textStart"
        android:text="Color is the aspect of things that is caused by differing qualities of light being reflected or emitted by them.

To see color, you have to have light. When light shines on an object some colors bounce off the object and others are absorbed by it. Our eyes only see the colors that are bounced off or reflected.

The sun’s rays contain all the colors of the rainbow mixed together. This mixture is known as white light. When white light strikes a white crayon or marker barrel, it appears white to us because it absorbs no color and reflects all color equally. A black crayon or marker cap absorbs all colors equally and reflects none, so it looks black to us. While artists consider black a color, scientists do not because black is the absence of all color."
        />
    <TextView
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textColor="@color/colorPrimary"
        android:textStyle="bold"
        android:text="@string/video_api_app"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:layout_marginTop="10dp"
        android:lineSpacingExtra="1.5dp"
        android:paddingRight="4dp"
        android:textAlignment="textStart"
        android:paddingLeft="4dp"
        android:layout_marginStart="10dp"
        android:text="Video is an electronic medium for the recording, copying, playback, broadcasting, and display of moving visual media. Video was first developed for mechanical television systems, which were quickly replaced by cathode ray tube systems which were later replaced by flat panel displays of several types."
       />
</LinearLayout>
    </ScrollView>
</FrameLayout>